--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Hello</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="MobileOptimized" content="176" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="robots" content="noindex,nofollow" />
+    <title>askii workout helper</title>
+    <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
+  
+    <style>
+       body {
+          font-family: sans-serif;
+          background-color: var(--tg-theme-bg-color, #ffffff);
+          color: var(--tg-theme-text-color, #222222);
+          font-size: 16px;
+          margin: 0;
+          padding: 0;
+          color-scheme: var(--tg-color-scheme);
+      }
+
+      a {
+          color: var(--tg-theme-link-color, #2678b6);
+      }
+
+      button {
+          display: block;
+          width: 100%;
+          font-size: 14px;
+          margin: 15px 0;
+          padding: 12px 20px;
+          border: none;
+          border-radius: 4px;
+          background-color: var(--tg-theme-button-color, #50a8eb);
+          color: var(--tg-theme-button-text-color, #ffffff);
+          cursor: pointer;
+      }
+
+      button[disabled] {
+          opacity: 0.6;
+          cursor: auto;
+          pointer-events: none;
+      }
+    </script>
   </head>
   <body>
     <button>privet</button>
