--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           cursor: auto;
           pointer-events: none;
       }
-    </script>
+    </style>
   </head>
   <body>
     <button>privet</button>
